--- a/css/general.css
+++ b/css/general.css
@@ -8,6 +8,7 @@ html {
 	/* Тут ми виставляємо величину rem = 10px, rem відносна одиниця, використовуючи це ми можемо задавати padding в rem та max-width в rem
    */
 	font-size: 62.5%;
+	overflow-x: hidden;
 }
 
 body {
@@ -15,6 +16,7 @@ body {
 	line-height: 1;
 	font-weight: 400;
 	color: #555;
+	overflow-x: hidden;
 }
 
 /******************************************/
