--- a/css/queries.css
+++ b/css/queries.css
@@ -119,6 +119,59 @@
 		grid-template-columns: 1fr;
 		gap: 3.2rem;
 	}
+
+	/* mobile nav */
+	.btn-mobile-nav {
+		display: block;
+	}
+
+	.main-nav {
+		background-color: rgba(255, 255, 255, 0.97);
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100vh;
+		transform: translateX(100%);
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		/* hide nav */
+		/* Allows no transition at all */
+		/* display: none; */
+		transition: all 0.5s ease-in;
+		opacity: 0;
+
+		pointer-events: none;
+		visibility: hidden;
+	}
+
+	.nav-open .main-nav {
+		opacity: 1;
+		pointer-events: auto;
+		visibility: visible;
+		transform: translateX(0);
+	}
+
+	.nav-open .icon-mobile-nav[name="close-outline"] {
+		display: block;
+	}
+
+	.nav-open .icon-mobile-nav[name="menu-outline"] {
+		display: none;
+	}
+
+	.main-nav-list {
+		flex-direction: column;
+		gap: 4.8rem;
+	}
+
+	.main-nav-link:link,
+	.main-nav-link:visited {
+		font-size: 3rem;
+	}
 }
 
 /*
