--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,25 @@ Default: 8px
 	background-color: #cf711f;
 }
 
+/* ---Mobile navigation--- */
+.btn-mobile-nav {
+	border: none;
+	background: none;
+	cursor: pointer;
+
+	display: none;
+}
+
+.icon-mobile-nav {
+	height: 4.8rem;
+	width: 4.8rem;
+	color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+	display: none;
+}
+
 /* ---Header--- */
 .header {
 	display: flex;
@@ -165,6 +184,8 @@ Default: 8px
 
 	height: 9.6rem;
 	padding: 0 4.8rem;
+
+	position: relative;
 }
 
 .logo {
