--- a/css/queries.css
+++ b/css/queries.css
@@ -94,6 +94,10 @@
 		padding: 2.4rem 3.2rem 3.2rem 3.2rem;
 	}
 
+	.testimonial-container {
+		margin: 1.6rem;
+	}
+
 	.testimonials {
 		grid-template-columns: 1fr 1fr;
 	}
@@ -171,6 +175,47 @@
 	.main-nav-link:link,
 	.main-nav-link:visited {
 		font-size: 3rem;
+	}
+}
+
+/* Media smaller tablets */
+/* 704px */
+@media (max-width: 44em) {
+	.grid {
+		gap: 3.2rem;
+	}
+
+	.grid--3-col,
+	.grid--4-col {
+		grid-template-columns: repeat(2, 1fr);
+	}
+
+	.diets {
+		grid-column: 1 / -1;
+		justify-self: center;
+	}
+
+	.heading-secondary {
+		margin-bottom: 4.8rem;
+	}
+
+	.pricing-plan {
+		width: 100%;
+	}
+
+	.grid--footer {
+		grid-template-columns: repeat(6, 1fr);
+	}
+
+	.logo-col,
+	.address-col {
+		grid-column: span 3;
+	}
+
+	.nav-col {
+		grid-row: 1;
+		grid-column: span 2;
+		margin-bottom: 3.2rem;
 	}
 }
 
