--- a/css/queries.css
+++ b/css/queries.css
@@ -219,6 +219,75 @@
 	}
 }
 
+/* Media phones */
+/* 544px */
+@media (max-width: 34em) {
+	.grid {
+		row-gap: 4.8rem;
+	}
+
+	.grid--2-col,
+	.grid--3-col,
+	.grid--4-col {
+		grid-template-columns: 1fr;
+	}
+
+	.btn,
+	.btn:link,
+	.btn:visited {
+		padding: 2.4rem 1.6rem;
+	}
+
+	.section-hero {
+		padding: 2.4rem 0 6.4rem 0;
+	}
+
+	.hero {
+		padding: 0 3.2rem;
+	}
+
+	.hero-img {
+		width: 80%;
+	}
+
+	.logos img {
+		height: 1.2rem;
+	}
+
+	.step-img-box:nth-child(2) {
+		grid-row: 1;
+	}
+
+	.step-img-box:nth-child(6) {
+		grid-row: 5;
+	}
+
+	.step-img-box {
+		transform: translateY(3.2rem);
+	}
+
+	.testimonials {
+		grid-template-columns: 1fr;
+	}
+
+	.gallery {
+		grid-template-columns: repeat(4, 1fr);
+	}
+
+	.cta {
+		grid-template-columns: 1fr;
+	}
+
+	.cta-text-box {
+		padding: 3.2rem;
+	}
+
+	.cta-img-box {
+		height: 32rem;
+		grid-row: 1;
+	}
+}
+
 /*
 --- 01 TYPOGRAPHY SYSTEM ---
 
