--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ Default: 8px
 	align-items: center;
 	background-color: #fdf2e9;
 
-	height: 9.6rem;
+	height: 7.2rem;
 	padding: 0 4.8rem;
 
 	position: relative;
@@ -191,6 +191,21 @@ Default: 8px
 .logo {
 	height: 2rem;
 	width: auto;
+}
+
+/* ---Sticky nav---  */
+.sticky .header {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	width: 100%;
+	background-color: rgba(255, 255, 255, 0.97);
+	box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+	z-index: 1000;
+}
+
+.sticky .section-hero {
+	margin-top: 7.2rem;
 }
 
 /* ---Hero Section--- */
