--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,10 @@ Default: 8px
 	box-shadow: 0 0 0 0.2rem rgba(253, 242, 233, 0.455);
 }
 
+.no-focus:focus {
+	box-shadow: none;
+}
+
 /* ---Navigation--- */
 
 .main-nav-list {
